# nook

./: .dockerignore  .gitignore  .jscpd.json  AGENTS.md  CODEX.md  Cargo.toml  Dockerfile  Dockerfile.cursor-agent  LICENSE  README.md  Taskfile.yml  ci-runner-benchmark.txt  docker-bake.hcl  docker-entrypoint.sh  recipe.json
agentic-ai/meta-agent/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
agentic-ai/meta-agent/src/: artifact.rs  codex.rs  executor.rs  lib.rs  main.rs  model.rs  planner-output.schema.json  planner.rs  task-output.schema.json
nook-app/: .gitignore  Cargo.toml  Taskfile.yml  docker-bake.hcl
nook-app/.cargo/: config.toml
nook-app/.task/: ci.yml  core.yml  docker.yml  extension.yml  wasm.yml  web.yml
nook-app/docker/: Taskfile.yml  base.Dockerfile  base.docker-bake.hcl  mkcert.Dockerfile  resolve-docker-host-ip.sh  sccache-report.sh  sccache-wrapper.sh  toolchain.Dockerfile  toolchain.docker-bake.hcl
nook-app/nook-auth/: Cargo.toml
nook-app/nook-auth/src/: records.rs
nook-app/nook-auth2/: Cargo.toml
nook-app/nook-auth2/src/: ids.rs  lib.rs  records.rs  wire.rs
nook-app/nook-core/: Cargo.toml  Dockerfile  coverage-floor.json  docker-bake.hcl
nook-app/nook-core/data/: authenticator_issuer_hosts.json  login_site_hosts.json
nook-app/nook-core/examples/: generate_vault_fixtures.rs
nook-app/nook-core/fixtures/: nook-projection.example.yaml
nook-app/nook-core/locales/: en.json  ru.json
nook-app/nook-core/src/: i18n.rs  lib.rs  test_support.rs
nook-app/nook-core/tests/: event_log_file_sync_replication.rs  event_log_harness.rs  event_log_workflow.rs  multi_device_workflow.rs  nexus_vault_workflow.rs  sentinel_vault_workflow.rs  session_cache_workflow.rs  vault_sync_workflow.rs  vault_workflow.rs
nook-app/nook-wasm/: Cargo.toml  Dockerfile  docker-bake.hcl
nook-app/nook-wasm/src/: application.rs  conversion.rs  error_mapping.rs  lib.rs  logger.rs  passkey_browser.rs  sync_io.rs  types.rs
nook-app/nook-web/: .env.test.example  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  Taskfile.yml  docker-bake.hcl  eslint.config.js  index.html  playwright.config.ts  tsconfig.app.json  vite.config.ts
nook-app/nook-web-extension/: README.md  package.json
nook-app/nook-web-extension/scripts/: build.ts
nook-app/nook-web-extension/src/: chrome.d.ts  manifest.ts
nook-app/nook-web/.task/: extension.yml  wasm.yml  web.yml
nook-app/nook-web/e2e/: drive-stub.ts  file-sync-provider.spec.ts  file-sync-stub.ts  fixtures.ts  fresh-vault-passwords.spec.ts  github-repos.ts  helpers.ts  legal-pages.spec.ts  local-folder-backup.spec.ts  multi-device-local.spec.ts  multi-device-sync.spec.ts  onboarding-file-provider.spec.ts  password-envelope-local.spec.ts  password-envelope-sync.spec.ts  provider-switch-passwords.spec.ts  sync-provider.ts  sync-vault.spec.ts
nook-app/nook-web/nook-vault-sentinel/: index.html  package.json  tsconfig.json  vite.config.ts
nook-app/nook-web/nook-vault-simple/: index.html  package.json  tsconfig.json  vite.config.ts
nook-app/nook-web/nook-web-app/: .env.development  .env.site  .env.unified  .gitignore  .prettierignore  Dockerfile  README.md  docker-bake.hcl  index.html  knip.json  package.json  playwright.config.ts  playwright.isolation.config.ts  tsconfig.app.json  tsconfig.config.json  tsconfig.json  vite.config.ts
nook-app/nook-web/nook-web-extension/: README.md  package.json  playwright.config.ts  tsconfig.json
nook-app/nook-web/nook-web-research/: .prettierrc  README.md  index.html  knip.json  package.json  tsconfig.json  vite.config.ts
nook-app/nook-web/nook-web-shared/: components.json  vite-config.ts
nook-app/nook-web/public/: about.html  privacy.html  terms.html
nook-app/nook-web/src/: App.svelte  app.css  main.ts
nook-core/: Cargo.toml  Dockerfile  coverage-floor.json  docker-bake.hcl
nook-core/examples/: generate_vault_fixtures.rs
nook-core/fixtures/: nook-vault.example.jsonl  nook-vault.example.yaml  session.example.jsonl
nook-core/locales/: en.json  ru.json
nook-core/src/: bip39.rs  database.rs  device_key_protection.rs  error.rs  event_canonical.rs  i18n.rs  lib.rs  multi_device.rs  password.rs  password_envelope.rs  secret_types.rs  secret_view.rs  session.rs  sync_provider_credentials.rs  sync_provider_store.rs  validation.rs  vault_connect.rs  vault_crypto.rs  vault_epoch.rs  vault_epoch_crypto.rs  vault_event.rs  vault_event_builder.rs  vault_event_graph.rs  vault_event_session.rs  vault_event_store.rs  vault_format.rs  vault_ids.rs  vault_import.rs  vault_projection.rs  vault_session.rs  vault_session_cache.rs  vault_signing.rs  vault_sync.rs  vault_sync_session.rs  vault_sync_store.rs  vault_wire.rs
nook-core/src/auth/: mod.rs  multi_device.rs
nook-core/src/crypto/: event_canonical.rs  mod.rs  vault_epoch_crypto.rs
nook-core/src/errors/: age_crypto.rs  database.rs  enrollment.rs  event.rs  mod.rs  multi_device.rs  password.rs  secret_payload.rs  session.rs  validation.rs  vault_crypto.rs  vault_epoch.rs  vault_format.rs  vault_sync.rs
nook-core/src/secrets/: password.rs  secret_types.rs
nook-core/src/sync/: mod.rs  sync_provider_credentials.rs  vault_sync_session.rs
nook-core/src/vault/: database.rs  mod.rs  vault_connect.rs  vault_event.rs  vault_event_graph.rs  vault_format.rs  vault_ids.rs  vault_import.rs  vault_session.rs  vault_wire.rs
nook-core/tests/: event_log_harness.rs  event_log_workflow.rs  multi_device_workflow.rs  session_cache_workflow.rs  sim_join_approve.rs  sim_support.rs  vault_sync_workflow.rs  vault_workflow.rs
nook-wasm/: Cargo.toml  Dockerfile  docker-bake.hcl  wasm-package.json
nook-wasm/src/: conversion.rs  error_mapping.rs  lib.rs  logger.rs  sync_io.rs  types.rs
nook-wasm/src/manager/: connect.rs  device_protection.rs  event_log.rs  mod.rs  (+4 more)
preflight/: Cargo.toml  Dockerfile  Taskfile.yml
preflight/src/: coverage.rs  lib.rs  main.rs
preflight/tests/: core_ownership.rs  coverage_reporting.rs  dockerfiles.rs  infra.rs  sccache_redis.rs  vault_app_isolation.rs  wasm_boundary.rs  workflow_concurrency.rs
(+1192 files in other folders)
