[workspace]
members = ["nook-core", "nook-wasm"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust core, wasm bindings, and Svelte web app for Nook."
repository = "https://github.com/bynull/nook"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
