[workspace]
members = [
    "nook-auth2",
    "nook-core",
    "nook-wasm",
]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Rust core, wasm bindings, and Svelte web app for Nook."
repository = "https://github.com/meta-secret/nook"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

# Compile all dependencies with optimizations even in dev/test mode.
# This makes cryptographic algorithms (like scrypt) run at native speed during cargo nextest / cargo test.
[profile.dev.package."*"]
opt-level = 3
