[package]
name = "nook-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
age = "0.11.3"
hex = "0.4.3"
serde_json = "1.0.150"

[lints]
workspace = true
