[package]
name = "nook-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
age = { version = "0.11.3", features = ["armor"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"

[lints]
workspace = true
