[package]
name = "nook-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
age = { version = "0.11.3", features = ["armor"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
hex = "0.4.3"
sha2 = "0.10.9"
bip39 = "2.2.2"
getrandom = "0.2.17"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
thiserror = "2.0.18"

[dev-dependencies]
rand_core = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.17", features = ["js"] }

[lints]
workspace = true
