[package]
name = "nook-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nook-core = { path = "../nook-core" }
serde_json = "=1.0.150"
wasm-bindgen = "=0.2.125"

[lints]
workspace = true
