[package]
name = "nook-preflight"
version = "1.0.0"
edition = "2024"
publish = false

[dependencies]
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
serde_json = "1.0.149"
syn = { version = "2.0.118", features = ["full", "visit"] }

[lints.clippy]
all = "warn"
pedantic = "warn"
