[package]
name = "nook-meta-agent"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "meta-agent"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
