[package]
name = "nook-meta-agent"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
publish = false

[[bin]]
name = "meta-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
codex = { package = "codex-core-api", git = "https://github.com/openai/codex.git" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
tempfile = "3.27.0"
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1.52.0", features = ["macros", "rt"] }

# Git dependencies do not inherit the source workspace's patches. These two
# entries mirror openai/codex main so its `proxy` WebSocket feature resolves.
[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "0e5b2d73aa18dd9f0a50ee9ff199d5aef7594186" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "4fffad30fe373adbdcffab9545e9e9bf4f2fc19f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "4fffad30fe373adbdcffab9545e9e9bf4f2fc19f" }
