[package]
name = "nook-auth2"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[features]
mock-passkey = []

[dependencies]
aes-gcm = { version = "0.11.0", default-features = false, features = ["aes", "alloc"] }
age = { version = "0.11.3", features = ["armor"] }
base64 = "0.22"
bech32 = "0.9.1"
getrandom = "0.2.17"
hex = "0.4.3"
hkdf = "0.12.4"
pbkdf2 = { version = "0.13.0", features = ["sha2"] }
percent-encoding = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.18"
tracing = { version = "0.1.41", default-features = false, features = ["std", "attributes"] }
zeroize = "1.9.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.17", features = ["js"] }

[lints]
workspace = true
