[package]
name = "nook-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[features]
mock-passkey = ["nook-auth2/mock-passkey"]

[dependencies]
nook-auth2 = { path = "../nook-auth2" }
serde = { version = "1.0.228", features = ["derive"] }
age = { version = "0.11.3", features = ["armor"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
hex = "0.4.3"
sha2 = "0.10.9"
bip39 = "2.2.2"
getrandom = "0.2.17"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
thiserror = "2.0.18"
aes-gcm = { version = "0.11.0", default-features = false, features = ["aes", "alloc"] }
hkdf = "0.12.4"
pbkdf2 = { version = "0.13.0", features = ["sha2"] }
tracing = { version = "0.1.41", default-features = false, features = ["std", "attributes"] }
zeroize = "1.9.0"
wasm-bindgen = "0.2.125"
percent-encoding = "2.3.2"

[dev-dependencies]
rand_core = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.17", features = ["js"] }

[lints]
workspace = true
