[package]
name = "nook-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nook-core = { path = "../nook-core" }
coset = "0.4.2"
passkey-types = "0.5.0"
serde_json = "1.0.150"
wasm-bindgen = "0.2.125"
getrandom = { version = "0.2.17", features = ["js"] }
rexie = "0.6.2"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Navigator", "Window", "Storage"] }
base64 = "0.21.7"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json"] }
thiserror = "2.0.18"
flume = "0.11.0"
gloo-file = { version = "0.4.0", features = ["futures"] }
gloo-storage = "0.4.0"
gloo-utils = "0.3.0"
urlencoding = "2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["registry", "fmt", "std"] }
tracing-web = "0.1.3"
zeroize = "1.9.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
browser-wasm-tests = []

[lints]
workspace = true
