[package]
name = "nook-wasm-unified"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nook-core = { path = "../../../nook-core" }
nook-wasm = { path = "../.." }
wasm-bindgen = "0.2.125"

[lints]
workspace = true
